# attestations

./: .gitignore  Cargo.toml  DESIGN.md  README.md  default.nix  package-lock.json  package.json
dna/workdir/dna/: dna.yaml
dna/workdir/happ/: happ.yaml
dna/zomes/attestations/: Cargo.toml
dna/zomes/attestations/src/: attestation.rs  error.rs  handshake.rs  lib.rs  nonce.rs  signals.rs
dna/zomes/attestations_core/: Cargo.toml
dna/zomes/attestations_core/src/: lib.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles_core/: Cargo.toml
nix/: sources.json
tests/: package.json
tests/src/: attestations.ts  common.ts  index.ts  profile.ts
ui/apps/attestations/: index.html  package.json
ui/apps/attestations/src/: attestations-app.ts  index.ts
ui/lib/: package.json
ui/lib/src/: attestations.service.ts  attestations.store.ts  index.ts  sharedStyles.ts  types.ts
ui/lib/src/elements/: attestation-folk.ts  attestations-attestation-dialog.ts  attestations-attestation.ts  attestations-controller.ts  attestations-notify-dialog.ts  copiable-content.ts  verify-attestation.ts
workdir/: web-happ.yaml
