[package]
authors = ["eric@harris-braun.com"]
edition = "2021"
name = "attestations_core"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "attestations_core"

[dependencies]
serde = "1"
derive_more = "0"
hdk = {version = "0.0.140", features = ["encoding"]}
holochain_deterministic_integrity = {version = "0.0.12"}

